--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   get: ^4.6.1
   http: ^0.13.4
   photo_view: ^0.13.0
+  internet_connection_checker: ^0.0.1+3
 
 dev_dependencies:
   flutter_test:
