--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^0.13.4
   photo_view: ^0.13.0
   internet_connection_checker: ^0.0.1+3
+  connectivity_plus: ^2.2.1
 
 dev_dependencies:
   flutter_test:
